--- a/views/disciplina/listar_dis.ejs
+++ b/views/disciplina/listar_dis.ejs
@@ -17,6 +17,7 @@
         <th>Codigo</th>
         <th>Nome da disciplina</th>
         <th>Carga Horária</th>
+        <th>Detalhar</th>
         <th>Deletar</th>
     </tr>
     <% for (let i = 0; i < listad.length ; i++){ %>
